<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_personal_info"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_personal_info" />
        <item
            android:id="@+id/nav_academic_info"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_academic_info" />
        <item
            android:id="@+id/nav_technical_info"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/technical_info_title" />
        <item
            android:id="@+id/nav_work_info"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/work_info_title" />
        <item
            android:id="@+id/nav_exam_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/exam_list_title" />
        <item
            android:id="@+id/nav_vacancy"
            android:icon="@drawable/ic_menu_vacancies"
            android:title="@string/vacancies" />
        <item
            android:id="@+id/nav_interview_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/interview_list_title" />

        <item
            android:id="@+id/nav_team_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/team_list_title" />

        <item
            android:id="@+id/nav_employee_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/employee_list_title" />

    </group>
</menu>